assets/css/portfolio.css
/* ... */
/*---------------------
  Header
-----------------------*/
.header {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 9;
  transition: box-shadow 0.3s ease-in-out;
}

.header.scrolled {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 9;
  transition: box-shadow 0.3s ease-in-out;
  background: rgba(255, 255, 255, 0.01);
  backdrop-filter: blur(10px);
  text-align: center;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
  z-index: 20;
}

.header__nav__option {
  padding: 20px 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header__nav__menu {
  display: inline-block;
  margin-right: 45px;
}
.header__nav__menu ul li {
  list-style: none;
  display: inline-block;
  margin-right: 42px;
  position: relative;
}
.header__nav__menu ul li.active a:after {
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1);
}
.header__nav__menu ul li:hover a:after {
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1);
}
.header__nav__menu ul li:hover .dropdown {
  top: 34px;
  opacity: 1;
  visibility: visible;
}
.header__nav__menu ul li:last-child {
  margin-right: 0;
}
.header__nav__menu ul li .dropdown {
  position: absolute;
  left: 0;
  top: 60px;
  width: 140px;
  background: #ffffff;
  text-align: left;
  padding: 2px 0;
  z-index: 9;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: all, 0.3s;
  -o-transition: all, 0.3s;
  transition: all, 0.3s;
}
.header__nav__menu ul li .dropdown li {
  display: block;
  margin-right: 0;
}
.header__nav__menu ul li .dropdown li a {
  font-size: 14px;
  color: #111111;
  padding: 8px 20px;
  text-transform: capitalize;
}
.header__nav__menu ul li .dropdown li a:after {
  display: none;
}
.header__nav__menu ul li a {
  font-size: 15px;
  color: #ffffff;
  display: block;
  text-transform: uppercase;
  position: relative;
  padding: 6px 0;
}
.header__nav__menu ul li a:after {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 2px;
  backdrop-filter: blur(1rem);
  transition: 0.5s;
  border: solid 1px transparent;
  z-index: -1;
  background-image: linear-gradient(
      137.48deg,
      #451bde 10%,
      #451bde 45%,
      #451bde 67%,
      #451bde 87%
    ),
    linear-gradient(
      137.48deg,
      #451bde 10%,
      #451bde 45%,
      #451bde 67%,
      #0044ff 87%
    );
  background-origin: border-box;
  background-clip: content-box, border-box;
  content: "";
  -webkit-transform: scale(0);
      -ms-transform: scale(0);
          transform: scale(0);
  -webkit-transition: all, 0.3s;
  -o-transition: all, 0.3s;
  transition: all, 0.3s;
}

.header__nav__social {
  display: inline-block;
  position: relative;
  padding-left: 35px;
  margin-left: 5px;
}
.header__nav__social:before {
  position: absolute;
  left: 0;
  top: 4px;
  height: 20px;
  width: 1px;
  background: rgba(225, 225, 225, 0.2);
  content: "";
} 
.header__nav__social a {
  color: white;
  font-size: 22px;
  margin-right: 20px;
}
.header__nav__social a svg {
  transition: transform 200ms ease-out;
}
.header__nav__social a svg:hover {
  transform: scale(1.3);
}
.header__nav__social a:last-child {
  margin-right: 0;
}
.language__selector {
  transform: translateY(2px);
}
.language-dropdown {
  background-color: transparent;
  border: transparent;
}
.language-dropdown:hover {
  background-color: #000116;
}
.language-dropdown svg {
  width: 22px;
  height: 22px;
  transition: transform 100ms linear;
}
.language-dropdown svg:hover {
  transform: scale(1.2);
}
.dropdown-menu {
  background-color: #020828;
  opacity: 0;
  visibility: hidden;
  max-height: 0;
  transform: translateY(-10px);
  transition: opacity 0.3s ease-out, transform 0.3s ease-out, visibility 0.3s ease-out;
  display: block;
}
.dropdown-menu.show-animated {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
}
.dropdown-item {
  background-color: #020828;
  color: white;
  padding: 10px;
}
.dropdown-item:hover {
  color: white;
  background: linear-gradient(to right, #0044ff, #290e8c);
}
.dropdown-item svg {
  margin-right: 5px;
  width: 20px;
  height: 20px;
}
.slicknav_menu {
  display: none;
}
.slicknav_menu .dropdown {
  position: absolute;
  right: 65px;
  top: 32px;
  opacity: 1;
  transform: scale(1);
  transition: right 200ms ease-in-out, opacity  200ms ease-in-out, transform 300ms ease-in-out;
}
.slicknav_menu:has(.slicknav_open) .dropdown {
  right: -65px;
  opacity: 0;
  transform: scale(0);
}
.slicknav_menu .dropdown button svg  {
  width: 34px;
  height: 34px;
}
.slicknav_menu .dropdown-menu {
  transform: translateX(-70%);
}
.slicknav_icon-bar {
  transition: transform 300ms ease-in-out, opacity 300ms ease-in-out;
}
.slicknav_open .slicknav_icon-bar:first-of-type {
  transform: translate(1px, 240%) rotate(42deg) ;
}
.slicknav_open .slicknav_icon-bar:nth-of-type(2) {
  opacity: 0;
  transform: translateX(-5px);
}
.slicknav_open .slicknav_icon-bar:last-of-type {
  transform: translate(-1px, -270%) rotate(-42deg);
}
/*---------------------
  Hero
-----------------------*/
.hero {
  user-select: none;
}
.hero__slider.owl-carousel .owl-item.active .hero__text span {
  top: 0;
  opacity: 1;
  font-size: 1.1rem;
}
.hero__slider.owl-carousel .owl-item.active .hero__text h1 {
  top: 0;
  opacity: 1;
}
.hero__slider.owl-carousel .owl-item.active .hero__text h2 {
  top: 0;
  opacity: 1;
}
.hero__slider.owl-carousel .owl-item.active .hero__text .primary-btn {
  top: 0;
  opacity: 1;
}
.hero__item {
  min-height: 100vh;
}
.hero__text__container {
  z-index: 2;
}
.hero__text span {
  color: #ffffff;
  display: block;
  font-size: 15px;
  letter-spacing: 2px;
  text-transform: uppercase;
  margin-bottom: 18px;
  position: relative;
  top: 100px;
  opacity: 0;
  -webkit-transition: all, 0.3s;
  -o-transition: all, 0.3s;
  transition: all, 0.3s;
}
/* ... */

